Fixes custom post image alignment (#173)
* Es rake (#170)

* 3.10.17 -1

* 3.10.17 -2

* 3.10.17 -3

* 3.10.17 -4

* 3.10.17 -5

* 3.10.17 -6

* 3.10.17 -7

* 3.10.17 -8

* 3.10.17 -9

* 3.10.17 -10

* 3.10.17 -11

* 3.10.17 -12

* 3.10.17 -12

* 3.10.17 -13

* 3.10.17 -14

* changed post section columns back to previous design and changed css (#172)

--- a/app/assets/stylesheets/components/_post_section.scss
+++ b/app/assets/stylesheets/components/_post_section.scss
@@ -41,11 +41,11 @@
     }
   }
   &.image_right > .post-section-tolerance {
-  }
-  &.image_left > .post-section-tolerance {
-    .col-sm-7 {
+    .col-sm-5 {
       float: right;
     }
+  }
+  &.image_left > .post-section-tolerance {
   }
   &.full_text > .post-section-tolerance {
     .col-sm-5 {
